commit for terry to fly

--- a/index.html
+++ b/index.html
@@ -237,6 +237,14 @@
             position: relative;
             top: -2570px;
         }
+        
+        #terry {
+            width: 300px;
+            position: relative;
+            top: -3100px;
+            left: -75px;
+            z-index: 5;
+        }
     </style>
 </head>
 
@@ -341,6 +349,10 @@
     </div>
     <div id="jurassic-bg">
         <img src="SVG/SVG/assets2/SVG/Asset 6.svg">
+    </div>
+
+    <div id="terry">
+        <img src="SVG/SVG/assets2/SVG/Asset 1.svg">
     </div>
 
     <div id="next">
