--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="styleheet" type="text/css" href="css/normalize.css">
     <style>
         html {
             background-color: grey;
@@ -18,7 +19,7 @@
             position: relative;
             width: 600px;
             top: 40px;
-            margin: 0 100px;
+            margin: 0 auto;
             background-color: white;
         }
         /*wormhole controls the width of the entire animation due to positioning and inheritence */
