commit messing with margin

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             position: relative;
             width: 600px;
             top: 40px;
-            margin: 0 auto;
+            margin: 0 150px;
             background-color: white;
         }
         /*wormhole controls the width of the entire animation due to positioning and inheritence */
@@ -36,11 +36,6 @@
         svg {
             height: 300px;
             width: 300px;
-        }
-        
-        #hourglass {
-            height: 50px;
-            width: 50px;
         }
         
         .title {
