--- a/index.html
+++ b/index.html
@@ -226,6 +226,8 @@
             color: skyblue;
             text-transform: uppercase;
             text-align: center;
+            position: relative;
+            z-index: 5;
         }
         
         #first-tree {
