commit for better leaf management

--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
         }
         
         #big-green-palm-leaf-2 {
-            width: 130px;
+            width: 120px;
             position: relative;
             top: -3580px;
-            left: 50px;
+            left: 130px;
             z-index: 3;
         }
     </style>
@@ -278,109 +278,117 @@
     </div>
 
     <!-- Dino Days!-->
+
     <div class="title">
         <img src="SVG/SVG/Asset 138.svg">
 
     </div>
+    <div class="wrapper">
+        <div id="topline">
+            <img src="SVG/SVG/Asset 215.svg">
+        </div>
 
-    <div id="topline">
-        <img src="SVG/SVG/Asset 215.svg">
-    </div>
+        <div class="dino-days-bg">
 
-    <div class="dino-days-bg">
-
-        <img src="SVG/SVG/Asset 216.svg">
-    </div>
-
-
-    <div id="cloud">
-        <img src="SVG/SVG/SVG/Asset 249.svg">
-    </div>
-    <div id="cloud2">
-        <img src="SVG/SVG/assets2/SVG/Asset 33.svg">
-    </div>
-    <div id="volcano">
-        <img src="SVG/SVG/assets2/SVG/Asset 37.svg">
-    </div>
-    <div id="volcano2">
-        <img src="SVG/SVG/assets2/SVG/Asset 38.svg">
-    </div>
-
-    <div id="lava">
-        <img src="SVG/SVG/Asset 192.svg">
-    </div>
-    <div id="red-bubble">
-        <img src="SVG/SVG/assets2/SVG/Asset 44.svg">
-    </div>
-
-    <div id="red-bubble-small">
-        <img src="SVG/SVG/assets2/SVG/Asset 44.svg">
-
-    </div>
-    <div id="thin-redline">
-        <img src="SVG/SVG/SVG/Asset 250.svg ">
-
-    </div>
+            <img src="SVG/SVG/Asset 216.svg">
+        </div>
 
 
-    <div id="top-red-curve-line">
-        <img src="SVG/SVG/Asset 200.svg">
+        <div id="cloud">
+            <img src="SVG/SVG/SVG/Asset 249.svg">
+        </div>
+        <div id="cloud2">
+            <img src="SVG/SVG/assets2/SVG/Asset 33.svg">
+        </div>
+        <div id="volcano">
+            <img src="SVG/SVG/assets2/SVG/Asset 37.svg">
+        </div>
+        <div id="volcano2">
+            <img src="SVG/SVG/assets2/SVG/Asset 38.svg">
+        </div>
 
-    </div>
+        <div id="lava">
+            <img src="SVG/SVG/Asset 192.svg">
+        </div>
+        <div id="red-bubble">
+            <img src="SVG/SVG/assets2/SVG/Asset 44.svg">
+        </div>
 
-    <div id="bottom-red-curve-line">
-        <img src="SVG/SVG/assets2/SVG/Asset 50.svg">
-    </div>
+        <div id="red-bubble-small">
+            <img src="SVG/SVG/assets2/SVG/Asset 44.svg">
 
+        </div>
+        <div id="thin-redline">
+            <img src="SVG/SVG/SVG/Asset 250.svg ">
 
-    <div id="lava-bed">
-        <img src="SVG/SVG/Asset 202.svg">
-    </div>
-
-    <div id="second-red-bubble">
-        <img src="SVG/SVG/assets2/SVG/Asset 44.svg">
-    </div>
-    <div id="lava-stream1">
-        <img src="SVG/SVG/assets2/SVG/Asset 63.svg">
-    </div>
-
-    <div id="lava-stream2">
-        <img src="SVG/SVG/assets2/SVG/Asset 63.svg">
-    </div>
+        </div>
 
 
-    <div id="volcano3">
-        <img src="SVG/SVG/assets2/SVG/Asset 39.svg">
-    </div>
-    <div id="lava-stream-small">
-        <img src="SVG/SVG/assets2/SVG/Asset 65.svg">
+        <div id="top-red-curve-line">
+            <img src="SVG/SVG/Asset 200.svg">
+
+        </div>
+
+        <div id="bottom-red-curve-line">
+            <img src="SVG/SVG/assets2/SVG/Asset 50.svg">
+        </div>
+
+
+        <div id="lava-bed">
+            <img src="SVG/SVG/Asset 202.svg">
+        </div>
+
+        <div id="second-red-bubble">
+            <img src="SVG/SVG/assets2/SVG/Asset 44.svg">
+        </div>
+        <div id="lava-stream1">
+            <img src="SVG/SVG/assets2/SVG/Asset 63.svg">
+        </div>
+
+        <div id="lava-stream2">
+            <img src="SVG/SVG/assets2/SVG/Asset 63.svg">
+        </div>
+
+
+        <div id="volcano3">
+            <img src="SVG/SVG/assets2/SVG/Asset 39.svg">
+        </div>
+        <div id="lava-stream-small">
+            <img src="SVG/SVG/assets2/SVG/Asset 65.svg">
+        </div>
+
+        <div id="second-red-bubble-small">
+            <img src="SVG/SVG/assets2/SVG/Asset 44.svg">
+        </div>
+        <div id="first-tree">
+            <img src="SVG/SVG/Asset 171.svg">
+        </div>
+
+        <!--This is where I keep the backgrounds-->
+        <div id="background">
+            <img src="SVG/SVG/Asset 168.svg">
+        </div>
+        <div id="jurassic-bg">
+            <img src="SVG/SVG/assets2/SVG/Asset 6.svg">
+        </div>
+
+        <div id="terry">
+            <img src="SVG/SVG/assets2/SVG/Asset 1.svg">
+        </div>
+
+        <div id="big-green-palm-leaf">
+            <img src="SVG/SVG/assets2/SVG/Asset 13.svg">
+        </div>
+        <div id="big-green-palm-leaf-2">
+            <img src="SVG/SVG/assets2/SVG/Asset 8.svg">
+        </div>
     </div>
 
-    <div id="second-red-bubble-small">
-        <img src="SVG/SVG/assets2/SVG/Asset 44.svg">
-    </div>
-    <div id="first-tree">
-        <img src="SVG/SVG/Asset 171.svg">
-    </div>
 
-    <!--This is where I keep the backgrounds-->
-    <div id="background">
-        <img src="SVG/SVG/Asset 168.svg">
-    </div>
-    <div id="jurassic-bg">
-        <img src="SVG/SVG/assets2/SVG/Asset 6.svg">
-    </div>
 
-    <div id="terry">
-        <img src="SVG/SVG/assets2/SVG/Asset 1.svg">
-    </div>
 
-    <div id="big-green-palm-leaf">
-        <img src="SVG/SVG/assets2/SVG/Asset 13.svg">
-    </div>
-    <div id="big-green-palm-leaf-2">
-        <img src="SVG/SVG/assets2/SVG/Asset 8.svg">
-    </div>
+
+
     <div id="next">
 
     </div>
